# lab04h

./: ..travis.yml.swp  .travis.yml  CMakeLists.txt
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_builds/formatter/: Makefile  cmake_install.cmake
formatter_lib/: .CmakeList.txt.swp  CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/_builds/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/_builds/formatter_ex/formatter/: Makefile
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver_app
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/formatter/: Makefile
solver_application/_build/solverlib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
